# Detrital-MC

./: .gitignore  .gitlab-ci.yml  .travis.yml  LICENSE  README  README.md
age_pdf_output/: README
data/predicted_ages/MC001/: Comparison.txt
docs/: rtd-requirements.txt
docs/source/: conf.py  index.rst
docs/source/examples/: pecube.rst
docs/source/manual/: age-dists.rst  comparison.rst  getting-started.rst  input-data.rst  input-file.rst  installation.rst  monte-carlo.rst  output-files.rst  overview.rst  quick-intro.rst  quick-start.rst  references.rst
input/: basin_summary_info.txt  det_mc_input.txt
source/: CMakeLists.txt  Makefile  Makefile_full_ls  build_mc.sh  buildlog.txt  det_mc_full_ls_PDF  detrital_mc.f90  detrital_mc2.f90  detrital_mc_0709.f90  detrital_mc_150409_f90  detrital_mc_full_ls_PDF.f90  detrital_mc_int8.f90  detrital_mc_orig_f90  indexx.f90  kptwo.f90  make_age_pdf.f90  module_definitions.f90  module_pdf_functions.f90  nrtype.f90  pdf_functions.f90  read_input_file.f90  sort2.f90
source/f77/: kuiper.f  probkuiper.f  sort.f
source/gauss_rand/: ziggurat.f90
source/macPDFs/: Makefile  mix_and_compare_pdfs.f90  mod_constants.f90  pdf_functions.f90
source/numrc_kstwo/: sort2.f90
